# fyp-typst

./: ablations.typ  abstract.typ  appendix.typ  conclusion.typ  dataset-curation.typ  front-page.typ  intro.typ  main.typ  preliminaries.typ  pyproject.toml  references.bib  related-work.typ  self-supervised.typ  summary.typ
illustrations/: dev.ipynb  fft.ipynb  mel-spectrograms.ipynb  sampling.ipynb  stft.ipynb
