[tool.poetry]
name = "fyp-typst"
version = "0.1.0"
description = ""
authors = ["hewliyang <hewliyang@u.nus.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
nbstripout = "^0.7.1"
numba = "^0.60.0"
librosa = "0.10.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
